tests/baselines/reference/iteratorSpreadInCall4.errors.txt
tests/cases/conformance/es6/spread/iteratorSpreadInCall4.ts(15,5): error TS2557: Expected at least 1 arguments, but after 0, found a spread that must be passed to a rest parameter.


==== tests/cases/conformance/es6/spread/iteratorSpreadInCall4.ts (1 errors) ====
    function foo(s1: symbol, ...s: symbol[]) { }
    class SymbolIterator {
        next() {
            return {
                value: Symbol(),
                done: false
            };
        }
    
        [Symbol.iterator]() {
            return this;
        }
    }
    
    foo(...new SymbolIterator);
        ~~~~~~~~~~~~~~~~~~~~~
!!! error TS2557: Expected at least 1 arguments, but after 0, found a spread that must be passed to a rest parameter.